--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
     <body>
         <main>
+            <!--Container for role tobe rendered here-->
+            <!--Container for  company will appear here -->
             <section id="resultContainer">
                 <h3>Details:</h3>
                 <p id="salarySelected">Salary for the selected role at the company will appear here.</p>
