successfull first render

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="module" src="./main.js"></script>
     </head>
     <body>
+        <h1>WorkAround Explorer</h1>
         <main>
             <!--Container for role tobe rendered here-->
             <!--Container for  company will appear here -->
